--- a/public/dashboard/dash.html
+++ b/public/dashboard/dash.html
@@ -10,6 +10,8 @@
   <!-- End G-Font -->
   <title>Dashboard</title>
   <!-- <link href="/dist/output.css" rel="stylesheet"> -->
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
 <!--  -->
   <style type="text/tailwindcss">
@@ -55,6 +57,289 @@
       /* .kotak {
         display: flex;
       } */
+
+      .container{
+        max-width: 1500px;
+        width: 155%;
+        overflow: hidden;
+        padding: 80px 0;
+      }
+      .container .main-card{
+        display: flex;
+        justify-content: space-evenly;
+        width: 200%;
+        transition: 1s;
+      }
+      .container .main-card{
+        display: flex;
+        justify-content: space-evenly;
+        width: 200%;
+        transition: 1s;
+      }
+      #two:checked ~ .main-card{
+        margin-left: -100%;
+      }
+      .container .main-card .cards1{
+        width: calc(100% / 2 - 10px);
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 20px;
+        justify-content: space-between;
+      }
+      .container .main-card .cards2{
+        width: calc(100% / 2 - 10px);
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 20px;
+        justify-content: space-between;
+      }
+      .main-card .cards1 .card{
+        width: calc(100% / 3 - 10px);
+        background: #fff;
+        border-radius: 12px;
+        padding: 30px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+        transition: all 0.4s ease;
+      }
+      .main-card .cards2 .card{
+        width: calc(100% / 3 - 10px);
+        background: #fff;
+        border-radius: 12px;
+        padding: 30px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+        transition: all 0.4s ease;
+      }
+      .main-card .cards2 .card1{
+        width: calc(100% / 3 - 10px);
+        background: #fff;
+        border-radius: 12px;
+        padding: 30px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+        transition: all 0.4s ease;
+      }
+      .main-card .cards2 .card2{
+        width: calc(100% / 3 - 10px);
+        background: #fff;
+        border-radius: 12px;
+        padding: 30px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+        transition: all 0.4s ease;
+      }
+      .main-card .cards1 .card:hover{
+        transform: translateY(-15px);
+      }
+      .main-card .cards2 .card:hover{
+        transform: translateY(-15px);
+      }
+      .main-card .cards2 .card1:hover{
+        transform: translateY(-15px);
+      }
+      .main-card .cards2 .card2:hover{
+        transform: translateY(-15px);
+      }
+      .cards1 .card .content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+      .cards2 .card .content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+      .cards2 .card1 .content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+      .cards2 .card2 .content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+      .cards1 .card .content .img{
+        height: 130px;
+        width: 130px;
+        border-radius: 50%;
+        padding: 3px;
+        background: #FF676D;
+        margin-bottom: 14px;
+      }
+      .cards2 .card .content .img{
+        height: 130px;
+        width: 130px;
+        border-radius: 50%;
+        padding: 3px;
+        background: #FF676D;
+        margin-bottom: 14px;
+      }
+      .cards2 .card1 .content .img{
+        height: 130px;
+        width: 130px;
+        border-radius: 50%;
+        padding: 3px;
+        background: #FF676D;
+        margin-bottom: 14px;
+      }
+      .cards2 .card2 .content .img{
+        height: 130px;
+        width: 130px;
+        border-radius: 50%;
+        padding: 3px;
+        background: #FF676D;
+        margin-bottom: 14px;
+      }
+      .card .content .img img{
+        height: 100%;
+        width: 100%;
+        border: 3px solid #ffff;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      .card1 .content .img img{
+        height: 100%;
+        width: 100%;
+        border: 3px solid #ffff;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      .card2 .content .img img{
+        height: 100%;
+        width: 100%;
+        border: 3px solid #ffff;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      .card .content .total{
+        font-size: 50px;
+        font-weight: 500;
+      }
+      .card1 .content .total{
+        font-size: 50px;
+        font-weight: 500;
+      }
+      .card2 .content .total{
+        font-size: 50px;
+        font-weight: 500;
+      }
+      .card .content .title{
+        font-size: 15px;
+        color: #94a3b8;
+      }
+      .card1 .content .title{
+        font-size: 15px;
+        color: #94a3b8;
+      }
+      .card2 .content .title{
+        font-size: 15px;
+        color: #94a3b8;
+      }
+      /* .card .content .media-icons{
+        margin-top: 10px;
+        display: flex;
+
+      }
+      .media-icons a{
+        text-align: center;
+        line-height: 33px;
+        height: 35px;
+        width: 35px;
+        margin: 0 4px;
+        font-size: 14px;
+        color: #FFF;
+        border-radius: 50%;
+        border: 2px solid transparent;
+        background: #FF676D;
+        transition: all 0.3s ease;
+      }
+      .media-icons a:hover{
+        color: #FF676D;
+        background-color: #fff;
+        border-color: #FF676D;
+      } */
+      .container .button{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 20px;
+      }
+      .button label{
+        height: 15px;
+        width: 15px;
+        border-radius: 20px;
+        background: #3B296F;
+        margin: 0 4px;
+        cursor: pointer;
+        transition: all 0.5s ease;
+      }
+      .button label.active{
+        width: 35px;
+        background: #7B2A8C;
+      }
+      #one:checked ~ .button .one{
+        width: 35px;
+      }
+      #one:checked ~ .button .two{
+        width: 15px;
+      }
+      #two:checked ~ .button .one{
+        width: 15px;
+      }
+      #two:checked ~ .button .two{
+        width: 35px;
+      }
+      input[type="radio"]{
+        display: none;
+      }
+      @media (max-width: 768px) {
+        .main-card .cards1 .card{
+          margin: 20px 0 10px 0;
+          width: calc(100% / 2 - 10px);
+        }
+        .main-card .cards2 .card{
+          margin: 20px 0 10px 0;
+          width: calc(100% / 2 - 10px);
+        }
+        .main-card .cards2 .card1{
+          margin: 20px 0 10px 0;
+          width: calc(100% / 2 - 10px);
+        }
+        .main-card .cards2 .card2{
+          margin: 20px 0 10px 0;
+          width: calc(100% / 2 - 10px);
+        }
+      }
+      @media (max-width: 600px) {
+        .main-card .cards1 .card{
+          /* margin: 20px 0 10px 0; */
+          width: 100%;
+        }
+        .main-card .cards2 .card{
+          /* margin: 20px 0 10px 0; */
+          width: 100%;
+        }
+        .main-card .cards2 .card1{
+          /* margin: 20px 0 10px 0; */
+          width: 100%;
+        }
+        .main-card .cards2 .card2{
+          /* margin: 20px 0 10px 0; */
+          width: 100%;
+        }
+      }
+
 
     }
   </style>
@@ -270,46 +555,75 @@
         <h1 class="text-2xl font-semibold text-ungu1 mr-[20px]">Dashboard</h1>
         <input type="date" id="tanggal" name="tanggal" class="rounded-lg text-sm text-gray-700 px-10">
       </div>
-      <div class="grid md:grid-cols-2 md:gap-x-[380px] lg:grid-cols-4 gap-x-[285px] lg:gap-x-[285px]"> 
-          <a href="../gudang/gudang.html" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
-              <img src="../../img/barstatic.png" alt="" class="w-12 h-12 absolute ml-[45px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
-            <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-biru rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
-              <h1 class="absolute -z-5 ml-[200px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[180px] lg:-mt-[13px]">561</h1>
-              <p class="absolute -z-5 ml-[170px] mt-16 font-semibold text-slate-600 lg:text-[13px] lg:ml-[140px] lg:mt-[30px]">Total Inventaris</p>
+      <div class="container">
+        <input type="radio" name="dot" id="one">
+        <input type="radio" name="dot" id="two">
+        <div class="main-card">
+          <div class="cards1">
+            <div class="card">
+             <div class="content">
+               <div class="img">
+                <!--- <img src="images/img1.jpg" alt="">-->
+               </div>
+               <div class="details">
+                 <div class="total">516</div>
+                 <div class="title">Total Inventaris</div>
+               </div>
+      
+             </div>
             </div>
-          </a> 
-
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
-              <img src="../../img/recieve.png" alt="" class="w-16 h-16 absolute ml-[39px] mt-[43px] lg:w-10 lg:h-10 lg:ml-[13px] lg:mt-[16px]">
-            <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-hijau rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
-              <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[215px] lg:-mt-[13px]">5</h1>
-              <p class="absolute -z-5 ml-[170px] mt-16 font-semibold text-slate-600 lg:text-[13px] lg:ml-[140px] lg:mt-[30px]">Barang Diterima</p>
+            <div class="card">
+             <div class="content">
+               <div class="img">
+                <!--- <img src="images/img2.jpg" alt="">--->
+               </div>
+               <div class="details">
+                 <div class="total">5</div>
+                 <div class="title">Barang Diterima</div>
+               </div>
+             </div>
             </div>
-          </a> 
-
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
-              <img src="../../img/download.png" alt="" class="w-12 h-12 absolute ml-[46px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
-            <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-kuning rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
-              <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[200px] lg:-mt-[13px]">2</h1>
-              <p class="absolute -z-5 ml-[170px] mt-16 font-semibold text-slate-600 lg:text-[13px] lg:ml-[140px] lg:mt-[30px]">Barang Masuk</p>
+            <div class="card">
+             <div class="content">
+               <div class="img">
+                <!-- <img src="images/img3.jpg" alt="">---->
+               </div>
+               <div class="details">
+                 <div class="total">2</div>
+                 <div class="title">Barang Masuk</div>
+               </div>
+             </div>
             </div>
-          </a> 
-
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
-              <img src="../../img/upload.png" alt="" class="w-12 h-12 absolute ml-[46px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
-            <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-birumuda rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
-              <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[200px] lg:-mt-[13px]">5</h1>
-              <p class="absolute -z-5 ml-[170px] mt-16 font-semibold text-slate-600 lg:text-[13px] lg:ml-[140px] lg:mt-[30px]">Barang Keluar</p>
+          </div>
+          <div class="cards2">
+            <div class="card1">
+             <div class="content">
+               <div class="img">
+                 <!---<img src="images/img4.jpg" alt="">--->
+               </div>
+               <div class="details">
+                 <div class="total">5</div>
+                 <div class="title">Barang Keluar</div>
+               </div>
+             </div>
             </div>
-          </a> 
-
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5 mb-5">
-              <img src="../../img/check.png" alt="" class="w-12 h-12 absolute ml-[46px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
-            <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-ungu1 rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
-              <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[200px] lg:-mt-[13px]">3</h1>
-              <p class="absolute -z-5 ml-[170px] mt-16 font-semibold text-slate-600 lg:text-[13px] lg:ml-[140px] lg:mt-[30px]">Data Supplier</p>
+            <div class="card2">
+             <div class="content">
+               <div class="img">
+                 <!--<img src="images/img5.jpg" alt="">---->
+               </div>
+               <div class="details">
+                 <div class="total">3</div>
+                 <div class="title">Data Supplier</div>
+               </div>
+             </div>
             </div>
-          </a> 
+          </div>
+        </div>
+        <div class="button">
+          <label for="one" class="active one"></label>
+          <label for="two" class="two"></label>
+        </div>
       </div>
     </div>
     
