--- a/public/dashboard/ubahSupplier.html
+++ b/public/dashboard/ubahSupplier.html
@@ -51,6 +51,22 @@
         display: flex;
       } */
 
+      body{
+        opacity: 0;
+      }
+       /* animate style */
+       @keyframes myanimate2 {
+        0%{
+          transform: translate(0, 20rem);
+          width: 100%;
+        }
+        100%{
+          transform: none;
+          opacity: 1;
+          width: 100%;
+        }
+      }
+      /* end of animate style */
     }
 
     @media screen and (max-width: 1365px){
@@ -219,7 +235,7 @@
     }
   </script>
 </head>
-<body class="h-screen mx-auto antialiased flex justify-between bg-purple-100 font-inter">
+<body class="h-screen mx-auto antialiased flex justify-between bg-purple-100 font-inter" onload="onload()">
   
     <!-- NAV -->
     <div class="navbar fixed flex p-5 bg-gradient-to-r from-ungu1 to-ungu2 w-100% mr-0 z-10">
@@ -401,7 +417,7 @@
     <!-- END SIDE -->
 
     <!-- CONTENT -->
-<div class="h-[720px]">
+<div class="h-[720px]" id="content">
     <div class="mt-[90px] ml-[13px] sm:ml-0 md:ml-0 lg:ml-[230px] xl:ml-[5px]">
         <h1 class="xl:-mt-[5px] ml-[5px] sm:ml-[10px] md:ml-[15px] absolute text-ungu1 text-[25px] lg:ml-[25px] xl:ml-[220px]">Ubah Supplier</h1>
         <div class="kotak1 bg1 absolute bg-pp -ml-[3px] sm:ml-[11px] md:ml-[12px] xl:ml-[220px] w-[415px] sm:w-[616px] md:w-[742px] xl:w-[1100px]  h-[430px] md:h-[480px] xl:h-[490px] bg-white p-8 m-96 mt-[120px] xl:mt-[120px] rounded-lg shadow-2xl mb-5">
@@ -460,19 +476,6 @@
     </div>
     <!-- end of pop up box -->
     
-<script src="../../dist/dashboardScript/script.js"></script>
-<!-- <script>
-  const popup = document.querySelector('.modal-popup');
-
-  // event popup box
-  document.body.addEventListener('click', (e) => {
-    console.log(e.target.id)
-    if( e.target.id == 'logout' ){
-      popup.style.display = 'flex';
-    }else if(e.target.id == 'confirmErr'){
-      popup.style.display = 'none';
-    }
-  })
-</script> -->
+<script src="../../dist/dashboardScript/ubahSupplier.js"></script>
 </body>
 </html>
