--- a/public/gudang/gudang.html
+++ b/public/gudang/gudang.html
@@ -104,7 +104,6 @@ body{
 
 .table{
   width: 100%;
-  box-shadow: 0 0 .1rem rgba(0, 0, 0, 0.8);
   border-radius: .5rem .5rem 0 0;
   overflow: hidden;
   text-align: center;
@@ -189,6 +188,7 @@ body{
 .content-hidden > .flex-col > .container-table > .table > thead > tr > td{
   background-color: #fff;
   color: #0F172A;
+  border-bottom: .1rem solid #B7BCC4;
 }
 /* end of content hidden style */
 
