update responsive and add javascript

--- a/public/kategori/Elektronik.html
+++ b/public/kategori/Elektronik.html
@@ -153,10 +153,16 @@ body{
   padding: .3rem;
   background-color: #7B2A8C;
   box-sizing: border-box;
-  width: 6rem;
   cursor: pointer;
   color: white;
   border-radius: .5rem 0 0 .5rem;
+  width: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.table-footer > .prev > span{
+  margin-inline: .5rem;
 }
 
 
@@ -170,16 +176,21 @@ body{
   text-align: center;
   color: #707070;
 }
-
 .table-footer .next{
   border: .08rem solid #7B2A8C;
   padding: .3rem;
   background-color: #7B2A8C;
   box-sizing: border-box;
-  width: 6rem;
+  width: 7rem;
   border-radius: 0 .5rem .5rem 0;
   cursor: pointer;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.table-footer > .next > span{
+  margin-inline: .5rem;
 }
 
 /* animate */
@@ -593,9 +604,9 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><span><</span> Previous</button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next">Next <span>></span></button>
+            <button type="button" name="button" class="prev"><span><img src="../../img/icons/back.png" alt="Previos"></span> Previous</button>
+            <input type="text" name="" class="field" value="1" disabled>
+            <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
           </div>
         </div>
     </div>
@@ -650,10 +661,10 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><span><</span> Previous</button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next">Next <span>></span></button>
-          </div>
+            <button type="button" name="button" class="prev"><span><img src="../../img/icons/back.png" alt="Previos"></span> Previous</button>
+            <input type="text" name="" class="field" value="1" disabled>
+            <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
+        </div>
         </div>
     </div>
     </div>
