modifie page dasboard

--- a/public/dashboard/dash.html
+++ b/public/dashboard/dash.html
@@ -371,7 +371,6 @@
           margin-left: 65%;
         }
       }
-
       @media screen and (max-width: 767px){
         div.profile {
           margin-left: 58%;
@@ -392,6 +391,11 @@
 
       /* End Nav Profile */
 
+      @media screen and (max-width: 1098px){
+        .container > .main-card > .cards1{
+          max-width: 40%;
+        }
+      }
       @media (max-width: 768px) {
         .main-card .cards1 .card{
           margin: 20px 0 10px 0;
@@ -638,7 +642,6 @@
     <!-- END SIDE -->
 
     <!-- CONTENT -->
-    
     <div class="p-8 text-ungu1-font-semibold m-96 mt-12 ml-[10px] lg:ml-[195px] w-[100%] md:-ml-[18px]">
       <div class="flex">
         <h1 class="text-2xl font-semibold text-ungu1 mr-[20px]">Dashboard</h1>
@@ -689,6 +692,9 @@
               </a>
             </div>
           </div>
+          <style>
+            
+          </style>
           <div class="cards2">
             <div class="card1">
               <a href="barangKeluar.html">
