--- a/public/kategori/tambah-kategori.html
+++ b/public/kategori/tambah-kategori.html
@@ -225,6 +225,90 @@
       }
     }
 
+    @media screen and (max-width: 374px){
+      div .profile {
+        margin-left: 14%;
+      }
+      div .kotak1 {
+        width: 96%;
+        /* height: 46%; */
+      }
+      div .kotak2 {
+        width: 96%;
+      }
+      div .input hr {
+        width: 121%;
+      }
+      div .flex input {
+        width: 45%;
+      }
+      div .flex select {
+        width: 45%;
+      }
+      div h1 .block {
+        margin-left: 50%;
+      }
+      div.btn {
+        margin-left: -7%;
+      }
+    }
+
+    @media screen and (max-width: 349px){
+      div .profile {
+        margin-left: 14%;
+      }
+      div .kotak1 {
+        width: 96%;
+        height: 50%;
+      }
+      div .kotak2 {
+        width: 96%;
+      }
+      div .input hr {
+        width: 121%;
+      }
+      div .flex input {
+        width: 45%;
+      }
+      div .flex select {
+        width: 45%;
+      }
+      div h1 .block {
+        margin-left: 50%;
+      }
+      div.btn {
+        margin-left: -7%;
+      }
+    }
+
+    @media screen and (max-width: 349px){
+      div .profile {
+        margin-left: 14%;
+      }
+      div .kotak1 {
+        width: 96%;
+        height: 56%;
+      }
+      div .kotak2 {
+        width: 96%;
+      }
+      div .input hr {
+        width: 121%;
+      }
+      div .flex input {
+        width: 45%;
+      }
+      div .flex select {
+        width: 45%;
+      }
+      div h1 .block {
+        margin-left: 50%;
+      }
+      div.btn {
+        margin-left: -7%;
+      }
+    }
+
     
 
 
@@ -444,12 +528,12 @@
         </div>
         <div class="kotak2 absolute bg-pp -ml-[3px] sm:ml-[11px] md:ml-[12px] xl:ml-[220px] w-[415px] sm:w-[615px] md:w-[742px] xl:w-[1100px] h-[50px] md:h-[90px] sm:h-[50px] bg-gradient-to-t from-ungu1 to-ungu2 p-8 m-96 mt-[60px] sm:mt-[60px] xl:mt-[50px] rounded-b-none rounded-lg">
 
-            <h1 class="block pl-[70px] -mt-[15px] sm:-mt-[15px] md:-mt-0 sm:pl-[170px] md:pl-[220px] lg:pl-[250px] xl:pl-[390px] align-middle text-[23px] font-semibold pb-3 text-white">Tambah Data Kategori</h1>
+            <h1 class="block pl-[40px] -mt-[15px] sm:-mt-[15px] md:-mt-0 sm:pl-[170px] md:pl-[220px] lg:pl-[250px] xl:pl-[390px] align-middle text-[23px] font-semibold pb-3 text-white">Tambah Data Kategori</h1>
             
             <div class="input sm:ml-[100px] md:-ml-7">
               <form action="" class="grid mt-[40px] md:mt-[60px]">
                   <div class="flex">
-                      <span class="mt-[5px] ml-[1px] md:ml-[130px] xl:ml-[325px] ">Nama Barang : </span>
+                      <span class="mt-[5px] -ml-[6px] sm:ml-[1px] md:ml-[130px] xl:ml-[325px] ">Nama Barang : </span>
                       <input type="text" class="ml-[50px] w-[240px] md:w-[300px] bg-slate-100 rounded-full border-slate-400 px-4 py-1 border focus:border-ungu1 focus:bg-white focus:outline-none mb-4">
                   </div>
                   <div class="flex">
