--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -75,7 +75,7 @@
       /* end of animate style */
 
       /* Responsive */
-      @media screen and (max-width: 1365px){
+      @media screen and (max-width: 1480px){
         div.profile {
           margin-left: 82%;
         }
@@ -436,10 +436,10 @@
     <!-- CONTENT -->
   <div class="container h-[985px] sm:h-[955px] lg:h-[790px]" id="content"> 
     <h1 class="lg:mt-[75px] xl:mt-[75px] absolute text-ungu1 text-[25px] lg:ml-[240px] xl:ml-[240px]">Profile</h1>
-    <div class="kotak1 absolute bg-pp ml-[6px] sm:ml-[11px] md:ml-[12px] lg:ml-[235px] xl:ml-[225px] w-[415px] sm:w-[616px] md:w-[742px] lg:w-[760px] xl:w-[1100px] h-[850px] sm:h-[820px] lg:h-[680px] xl:h-[640px] bg-white p-8 m-96 mt-[120px] xl:mt-[120px] rounded-xl shadow-2xl">
+    <div class="kotak1 absolute bg-pp ml-[6px] sm:ml-[11px] md:ml-[12px] lg:ml-[235px] xl:ml-[225px] w-[415px]. sm:w-[616px]. md:w-[742px]. lg:w-[760px]. xl:w-[1100px]. h-[850px] sm:h-[820px] lg:h-[680px] xl:h-[640px] bg-white p-8 m-96 mt-[120px] xl:mt-[120px] rounded-xl shadow-2xl">
         
     </div>
-    <div class="kotak2 absolute bg-pp ml-[5px] sm:ml-[11px] md:ml-[12px] lg:ml-[235px] xl:ml-[225px] w-[415px] sm:w-[615px] md:w-[742px] lg:w-[760px] xl:w-[1100px] h-[150px] sm:h-[150px] bg-gradient-to-t from-ungu1 to-ungu2 p-8 m-96 mt-[80px] sm:mt-[80px] lg:mt-[120px] xl:mt-[120px] rounded-b-none rounded-xl">
+    <div class="kotak2 absolute bg-pp ml-[5px] sm:ml-[11px] md:ml-[12px] lg:ml-[235px] xl:ml-[225px] w-[415px]. sm:w-[615px]. md:w-[742px]. lg:w-[760px]. xl:w-[1100px]. h-[150px] sm:h-[150px] bg-gradient-to-t from-ungu1 to-ungu2 p-8 m-96 mt-[80px] sm:mt-[80px] lg:mt-[120px] xl:mt-[120px] rounded-b-none rounded-xl">
         <a href=""><img src="../../img/back.svg" alt="" class="w-[30px] h-[30px] -ml-5 sm:-ml-5 -mt-5 sm:-mt-5 xl:-ml-4 xl:-mt-4 absolute"></a>
         <h1 class="title hidden lg:block text-[25px] font-semibold text-white">NoFace21</h1>
         <div class="profile2 ml-[10px] sm:ml-[70px] mt-[50px] sm:mt-[60px] lg:ml-[290px] xl:ml-[445px] xl:mt-[15px]">
